--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,8 @@
     <string name="andersen">Andersen</string>
     <string name="to_fragment">To Fragment</string>
     <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="hello_default_fragment">Hello DEFAULT fragment</string>
     <string name="show_toast">Show toast!</string>
+    <string name="open">open</string>
+    <string name="close">close</string>
 </resources>
